# niss

./: .formatter.exs  .gitignore  .tool-versions  Dockerfile  README.md  fly.toml  mix.exs  prod_migration_20211217154220.sql  push.sh
.github/workflows/: deploy_niss.yml  deploy_niss_local.yml
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  target.exs  test.exs
core/groceries/: Cargo.toml
core/groceries/src/: lib.rs  prelude.rs  unit.rs
core/groceries/src/store/: event.rs  migrations.rs  mod.rs
core/groceries/src/store/migrations/cache/: 001_init.down.sql  001_init.up.sql
core/groceries/src/store/migrations/db/: 001_init.up.sql
db/: fly.toml
lib/: niss.ex  niss_web.ex
lib/niss/: accounts.ex  application.ex  mailer.ex  possessions.ex  pubsub.ex  release.ex  repo.ex
lib/niss_web/: endpoint.ex  gettext.ex  router.ex  session_id_plug.ex
net/: README.md
niss/: Dockerfile  README.md  fly.toml  mix.exs
niss/assets/: package-lock.json  package.json  tailwind.config.js
niss/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
niss/docs/: setup.md
niss/lib/: niss.ex  niss_web.ex
niss/test/: test_helper.exs
niss_core/: .gitignore  README.md  mix.exs
niss_core/config/: config.exs
niss_core/lib/: niss_core.ex  parse_ceiling_lights_signal.ex  record_ir.ex
niss_core/test/: doctest_tests.exs  (+3 more)
niss_fw/: README.md  mix.exs
niss_local/: .gitignore  README.md  deploy.sh  deploy_locally.sh  mix.exs  remote.sh
niss_ui/: .formatter.exs  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
test/: niss_test.exs
(+236 files in other folders)
