[package]
name = "groceries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
displaydoc = "0.2.3"
num-rational = "0.4.1"
postcard = { version = "1.0.2", default-features = false, features = ["use-std"] }
rusqlite = { version = "0.28.0", features = [
    "trace",
    "time",
    "uuid",
    "bundled",
] }
rusqlite_migration = "1.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
time = "0.3.15"
tracing = "0.1.37"
uuid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
color-eyre = "0.6.2"
tempfile = "3.3.0"
